feat: Complete Integrated Learning System Implementation
🎉 MAJOR FEATURE: Unified Learning System with LLM Integration

## What's New:
- ✅ Universal Learning Foundation (scoring, clustering, braid creation)
- ✅ CIL Specialized Learning (prediction tracking, outcome analysis, conditional plans)
- ✅ LLM Integration (braiding prompts, multi-provider client, structured lesson generation)
- ✅ Configuration Management (centralized, validated, environment-based)
- ✅ Monitoring & Error Handling (metrics, alerts, recovery, performance tracking)
- ✅ Learning Feedback Loop (careful integration between universal and CIL)
- ✅ Production Testing (comprehensive test suite)

## New Components:
- src/intelligence/universal_learning/ - Universal learning foundation
- src/intelligence/cil_learning/ - CIL specialized learning system
- src/intelligence/llm_integration/ - LLM client and braiding prompts
- src/intelligence/learning_config.py - Configuration management
- src/intelligence/learning_monitor.py - Monitoring and error handling
- src/intelligence/integrated_learning_system.py - Orchestrates everything

## Database Updates:
- Enhanced AD_strands table with 13 new learning columns
- Added pattern_evolution table for pattern tracking
- Comprehensive indexing for learning queries

## Key Features:
- Two-tier clustering (column + ML-based pattern clustering)
- Threshold-based promotion (strands → braids → metabraids)
- LLM-powered braid compression and lesson generation
- Database-first prediction tracking with market data integration
- Careful learning feedback loop to avoid circular dependencies
- Production-ready monitoring and error handling

## Testing:
- Comprehensive test suite for all components
- Production readiness verification
- All tests passing ✅

This completes the unified learning system as outlined in UNIFIED_LEARNING_SYSTEM_PLAN.md

--- a/Modules/Alpha_Detector/src/llm_integration/prompt_templates/central_intelligence_layer/analogy_engine.yaml
+++ b/Modules/Alpha_Detector/src/llm_integration/prompt_templates/central_intelligence_layer/analogy_engine.yaml
@@ -30,19 +30,13 @@ analyze_motif_analogy:
     Motif A:
     - Name: {motif_a[name]}
     - Family: {motif_a[family]}
-    - Invariants: {motif_a[invariants]}
-    - Fails When: {motif_a[fails_when]}
-    - Contexts: {motif_a[contexts]}
-    - Why Map: {motif_a[why_map]}
+    - Module Intelligence: {motif_a[module_intelligence]}
     - Confidence: {motif_a[confidence]:.3f}
     
     Motif B:
     - Name: {motif_b[name]}
     - Family: {motif_b[family]}
-    - Invariants: {motif_b[invariants]}
-    - Fails When: {motif_b[fails_when]}
-    - Contexts: {motif_b[contexts]}
-    - Why Map: {motif_b[why_map]}
+    - Module Intelligence: {motif_b[module_intelligence]}
     - Confidence: {motif_b[confidence]:.3f}
     
     Analysis Context:
@@ -106,9 +100,7 @@ generate_transfer_candidate:
     Source Motif:
     - Name: {source_motif[motif_name]}
     - Family: {source_motif[motif_family]}
-    - Invariants: {source_motif[invariants]}
-    - Contexts: {source_motif[contexts]}
-    - Why Map: {source_motif[why_map]}
+    - Module Intelligence: {source_motif[module_intelligence]}
     
     Analogy Analysis:
     - Similarity Score: {analogy[similarity_score]:.3f}
