--- a/Modules/Alpha_Detector/src/intelligence/conditional_trading_planner/config/ctp_config.yaml
+++ b/Modules/Alpha_Detector/src/intelligence/conditional_trading_planner/config/ctp_config.yaml
@@ -4,8 +4,8 @@
 # Module Settings
 module:
   name: "conditional_trading_planner"
-  version: "1.0.0"
-  description: "Trading Strategy Intelligence Engine"
+  version: "2.0.0"
+  description: "Conditional Trading Strategy Intelligence Engine"
 
 # Learning System Integration
 learning_system:
@@ -27,32 +27,72 @@ learning_system:
     - "group_type"
     - "method"
 
-# Trading Plan Generation
-trading_plans:
+# Conditional Trading Plan Generation
+conditional_plans:
   # Plan creation settings
   min_confidence_threshold: 0.7
   min_pattern_count: 2
   max_plans_per_pattern: 5
   
-  # Risk management defaults
-  default_stop_loss: "2%_below_entry"
-  default_target_price: "6%_above_entry"
-  max_drawdown_limit: "1%_of_portfolio"
-  max_duration_hours: 8
+  # Risk scoring (calculated by code, not LLM)
+  risk_scoring:
+    pattern_reliability_weight: 0.3
+    success_rate_weight: 0.3
+    statistical_significance_weight: 0.2
+    regime_compatibility_weight: 0.2
+  
+  # Leverage calculation (calculated by code, not LLM)
+  leverage_calculation:
+    min_leverage: 1
+    max_leverage: 5
+    base_multiplier: 3.0
+  
+  # Plan splitting strategy
+  plan_splitting:
+    split_by_pattern_type: true
+    split_by_timeframe: true
+    split_by_asset: true
+    split_by_market_regime: true
+    keep_entry_exit_together: true
   
   # Plan types
   plan_types:
-    - "basic_conditional"
-    - "advanced_conditional"
-    - "risk_managed"
-    - "dynamic_adaptive"
+    - "conditional_entry_exit"
+    - "conditional_management"
+    - "conditional_risk_management"
+    - "regime_adaptive"
 
 # LLM Integration
 llm:
-  # CTP-specific prompts
+  # CTP-specific prompts (conditional logic only, not mathematical scores)
   prompts:
+    conditional_plan_generation: |
+      Create a conditional trading plan based on this pattern analysis:
+      
+      PATTERN: {pattern_info}
+      HISTORICAL PERFORMANCE: {historical_performance}
+      
+      Generate conditional logic in this format:
+      "If [pattern conditions], then:
+      - [entry action with relative positioning]
+      - [management rules with conditions]
+      - [exit conditions with triggers]"
+      
+      Focus on:
+      1. Conditional logic only (no specific prices)
+      2. Relative positioning (2% below, 3% above, etc.)
+      3. Management rules (if X happens, do Y)
+      4. Exit conditions (when to exit, when to stop)
+      
+      Do NOT include:
+      - Specific prices or amounts
+      - Risk scores or leverage (calculated by code)
+      - Mathematical calculations
+      
+      Provide clear, actionable conditional logic only.
+    
     trade_outcome_analysis: |
-      Analyze this cluster of trade outcomes and extract trading strategy insights:
+      Analyze this cluster of trade outcomes and extract conditional trading insights:
       
       CLUSTER: {cluster_key}
       SUCCESS RATE: {success_rate:.2%}
@@ -63,28 +103,13 @@ llm:
       {trade_outcome_details}
       
       Focus on:
-      1. What trading conditions led to success vs failure?
-      2. How can we improve entry/exit timing?
-      3. What conditional trading rules should we add/modify?
+      1. What conditional logic led to success vs failure?
+      2. How can we improve conditional entry/exit rules?
+      3. What conditional management rules should we add/modify?
       4. What market conditions should we avoid?
-      5. How can we optimize risk management?
+      5. How can we optimize conditional risk management?
       
-      Provide specific, actionable insights for improving trading strategies.
-    
-    trading_plan_optimization: |
-      Based on historical performance data, optimize this trading plan:
-      
-      PATTERN: {pattern_info}
-      HISTORICAL PERFORMANCE: {historical_performance}
-      CURRENT PLAN: {current_plan}
-      
-      Optimize for:
-      1. Better entry conditions
-      2. Improved risk management
-      3. Higher success probability
-      4. Better R/R ratio
-      
-      Provide specific improvements and reasoning.
+      Provide specific, actionable insights for improving conditional trading strategies.
 
 # Performance Monitoring
 monitoring:
@@ -114,6 +139,18 @@ database:
     output: "conditional_trading_plan"
     learning_input: "trade_outcome"
     learning_output: "trade_outcome"  # with braid_level > 1
+  
+  # Data flow
+  data_flow:
+    rdi_output: "pattern"
+    cil_input: "pattern"
+    cil_output: "prediction_review"
+    ctp_input: "prediction_review"
+    ctp_output: "conditional_trading_plan"
+    dm_input: "conditional_trading_plan"
+    dm_output: "trading_decision"
+    trader_input: "trading_decision"
+    trader_output: "trade_outcome"
   
   # Query settings
   query_settings:
