--- a/env.example
+++ b/env.example
@@ -31,6 +31,17 @@ API_HOST=localhost
 API_PORT=8000
 API_KEY=your_api_key
 
+# Trading APIs
+HELIUS_API_KEY=your_helius_api_key
+JUPITER_API_URL=https://quote-api.jup.ag/v6
+ZEROEX_API_KEY=your_0x_api_key  # Optional, has free tier
+
+# Wallet Configuration
+# Note: Base and Ethereum use the same wallet (same private key, different networks)
+SOLANA_WALLET_PRIVATE_KEY=your_solana_private_key
+ETHEREUM_WALLET_PRIVATE_KEY=your_ethereum_private_key
+BASE_WALLET_PRIVATE_KEY=your_base_private_key  # Same as ETHEREUM_WALLET_PRIVATE_KEY
+
 # Monitoring
 SENTRY_DSN=your_sentry_dsn
 PROMETHEUS_PORT=9090
