--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,21 @@ ccxt==4.1.77
 pytz==2023.3
 python-dateutil==2.8.2
 
+# Trading APIs and blockchain
+solana==0.30.2
+web3==6.11.3
+eth-account==0.9.0
+
+# Web scraping for social media
+playwright==1.48.0
+telethon==1.36.0
+
+# Supabase for database
+supabase==2.18.1
+
+# System monitoring
+psutil==5.9.8
+
 # =============================================================================
 # CONFIGURATION & LOGGING
 # =============================================================================
