--- a/src/llm_integration/prompt_templates/social_lowcap/decision_maker_lowcap.yaml
+++ b/src/llm_integration/prompt_templates/social_lowcap/decision_maker_lowcap.yaml
@@ -1,170 +1,69 @@
-# Decision Maker Lowcap (DML) Prompts
-# Portfolio-aware decision making for social lowcap trades
+# Decision Maker Lowcap Module Prompt Templates
+# For making allocation decisions based on curator performance
 
-allocation_decision:
-  description: "Make allocation decisions based on curator performance and portfolio context"
-  category: "decision_maker_lowcap"
-  latest_version: "v1.0"
-  versions:
-    v1.0:
-      system_message: |
-        You are an expert portfolio manager specializing in social lowcap token allocation decisions.
-        Your task is to make intelligent allocation decisions based on curator performance, portfolio context, and risk management.
-        
-        You understand:
-        - Portfolio risk management and position sizing
-        - Curator performance analysis and reputation scoring
-        - Market conditions and liquidity considerations
-        - Social sentiment and token discovery patterns
-        - Risk-adjusted allocation strategies
-        
-        Always provide clear reasoning for your decisions.
+prompts:
+  allocation_decision:
+    system_message: |
+      You are a portfolio manager for social lowcap trading. Your job is to make allocation decisions
+      based on curator performance, portfolio context, and risk management.
       
-      prompt: |
-        Make an allocation decision for this social lowcap signal:
-        
-        Signal Details:
-        - Token: {token_ticker} ({token_chain})
-        - Curator: {curator_handle} (Weight: {curator_weight})
-        - Curator Score: {curator_score}/1.0
-        - Venue: {venue_dex} (Liquidity: ${liquidity_usd:,})
-        - Volume 24h: ${volume_24h:,}
-        
-        Portfolio Context:
-        - Book NAV: ${book_nav:,}
-        - Current Exposure: {current_exposure_pct}%
-        - Available Capacity: {available_capacity_pct}%
-        - Active Positions: {active_positions}
-        - Planned Positions: {planned_positions}
-        
-        Risk Limits:
-        - Max Concurrent Positions: {max_concurrent}
-        - Max Daily Allocation: {max_daily_pct}%
-        - Min Curator Score: {min_curator_score}
-        - Min Liquidity: ${min_liquidity:,}
-        
-        Provide your decision with:
-        - Action: approve/reject
-        - Allocation %: 0.0 to 5.0
-        - Reasoning: Clear explanation of decision factors
-        - Risk Assessment: Key risk factors considered
-        - Confidence: 0.0 to 1.0
-        
-        Return JSON with:
-        - action: "approve" or "reject"
-        - allocation_pct: 0.0 to 5.0
-        - allocation_usd: calculated amount
-        - reasoning: detailed explanation
-        - risk_factors: array of risk considerations
-        - confidence: 0.0 to 1.0
-        - curator_confidence: 0.0 to 1.0
+      Key principles:
+      - Allocate 1-5% of book NAV based on curator performance
+      - Consider portfolio capacity and current exposure
+      - Factor in curator consistency and success rate
+      - Balance risk vs reward based on curator track record
       
-      parameters:
-        temperature: 0.2
-        max_tokens: 1000
-        top_p: 0.9
-
-curator_evaluation:
-  description: "Evaluate curator performance and reputation"
-  category: "decision_maker_lowcap"
-  latest_version: "v1.0"
-  versions:
-    v1.0:
-      system_message: |
-        You are an expert curator analyst specializing in cryptocurrency influencer performance evaluation.
-        Your task is to assess curator performance and provide insights for allocation decisions.
+      Always return valid JSON with clear reasoning.
+    
+    prompt: |
+      Make an allocation decision for this social lowcap signal:
       
-      prompt: |
-        Evaluate this curator's performance:
-        
-        Curator: {curator_handle}
-        Platform: {platform}
-        Total Signals: {total_signals}
-        Success Rate: {success_rate}%
-        Avg Return: {avg_return}%
-        Consistency Score: {consistency_score}/1.0
-        Recent Performance: {recent_performance}
-        
-        Performance by Context:
-        - Solana: {solana_performance}
-        - Ethereum: {ethereum_performance}
-        - Liquidity <5k: {low_liquidity_performance}
-        - Liquidity 5-25k: {med_liquidity_performance}
-        - Liquidity 25k+: {high_liquidity_performance}
-        
-        Provide evaluation:
-        - Overall Score: 0.0 to 1.0
-        - Strengths: array of strengths
-        - Weaknesses: array of weaknesses
-        - Recommended Weight: 0.0 to 2.0
-        - Risk Assessment: risk level and factors
-        - Allocation Range: min-max % recommendation
-        
-        Return JSON with:
-        - overall_score: 0.0 to 1.0
-        - strengths: array of strings
-        - weaknesses: array of strings
-        - recommended_weight: 0.0 to 2.0
-        - risk_level: low, medium, high
-        - risk_factors: array of risk factors
-        - allocation_range: [min_pct, max_pct]
-        - confidence: 0.0 to 1.0
+      Curator Information:
+      - Curator ID: {curator_id}
+      - Curator Name: {curator_name}
+      - Curator Weight: {curator_weight}
+      - Curator Priority: {curator_priority}
+      - Curator Tags: {curator_tags}
+      - Curator Performance Score: {curator_performance_score}
+      - Curator Success Rate: {curator_success_rate}%
+      - Curator Consistency: {curator_consistency}
       
-      parameters:
-        temperature: 0.3
-        max_tokens: 1200
-        top_p: 0.9
-
-portfolio_analysis:
-  description: "Analyze portfolio impact and risk of potential allocation"
-  category: "decision_maker_lowcap"
-  latest_version: "v1.0"
-  versions:
-    v1.0:
-      system_message: |
-        You are an expert portfolio risk analyst specializing in social lowcap token allocations.
-        Your task is to analyze the portfolio impact and risk of potential allocations.
+      Token Information:
+      - Ticker: {token_ticker}
+      - Chain: {token_chain}
+      - Liquidity: ${token_liquidity:,.0f}
+      - Volume 24h: ${token_volume_24h:,.0f}
+      - Market Cap: ${token_market_cap:,.0f}
       
-      prompt: |
-        Analyze the portfolio impact of this potential allocation:
-        
-        Proposed Allocation:
-        - Token: {token_ticker}
-        - Amount: ${allocation_usd:,} ({allocation_pct}% of book)
-        - Curator: {curator_handle}
-        - Venue: {venue_dex}
-        
-        Current Portfolio:
-        - Total NAV: ${book_nav:,}
-        - Current Exposure: {current_exposure_pct}%
-        - Active Positions: {active_positions}
-        - Largest Position: {largest_position_pct}%
-        - Avg Position Size: {avg_position_pct}%
-        
-        Risk Metrics:
-        - Max Drawdown: {max_drawdown}%
-        - Sharpe Ratio: {sharpe_ratio}
-        - Win Rate: {win_rate}%
-        - Avg Holding Period: {avg_holding_days} days
-        
-        Provide analysis:
-        - Portfolio Impact: positive/negative/neutral
-        - Risk Level: low/medium/high
-        - Diversification Impact: improves/neutral/hurts
-        - Liquidity Impact: manageable/concerning/critical
-        - Concentration Risk: acceptable/monitor/critical
-        
-        Return JSON with:
-        - portfolio_impact: positive/negative/neutral
-        - risk_level: low/medium/high
-        - diversification_impact: improves/neutral/hurts
-        - liquidity_impact: manageable/concerning/critical
-        - concentration_risk: acceptable/monitor/critical
-        - risk_factors: array of specific risk factors
-        - recommendations: array of recommendations
-        - confidence: 0.0 to 1.0
+      Portfolio Context:
+      - Available Capacity: {available_capacity_pct}%
+      - Current Exposure: {current_exposure_pct}%
+      - Planned Positions: {planned_positions}
+      - Book NAV: ${book_nav:,.0f}
       
-      parameters:
-        temperature: 0.2
-        max_tokens: 1000
-        top_p: 0.9
+      Curator Context:
+      {curator_context}
+      
+      Return a JSON object with:
+      - action: "approve" or "reject"
+      - allocation_pct: allocation percentage (0.0 to 5.0)
+      - reasoning: brief explanation of decision
+      - confidence: 0.0 to 1.0
+      - risk_factors: list of key risk factors
+      - opportunity_factors: list of key opportunity factors
+      
+      Example response:
+      {
+        "action": "approve",
+        "allocation_pct": 2.5,
+        "reasoning": "Strong curator with 78% success rate, good liquidity, fits portfolio capacity",
+        "confidence": 0.82,
+        "risk_factors": ["New token", "Moderate liquidity"],
+        "opportunity_factors": ["High curator performance", "Good market conditions"]
+      }
+    
+    llm_parameters:
+      model: "gpt-4o-mini"
+      temperature: 0.2
+      max_tokens: 300
+      response_format: "json_object"
