Major Discord integration and trading system updates
- Added Discord monitoring with user bot token authentication
- Implemented real on-chain exit trades for Solana and EVM tokens
- Updated Jupiter API to V3 endpoints
- Added Uniswap V3 price monitoring for Ethereum and Base
- Implemented SOL/USD price conversion for Solana monitoring
- Added ASTER token to ignore list
- Updated allocation ranges to 2-6% for social signals
- Added 60% first take-profit for all new positions
- Implemented exit recalculation for existing positions
- Added admin tools for triggering exits and recalculating positions
- Fixed multiple trader instance conflicts
- Enhanced price monitoring with proper rate limiting

--- a/env.example
+++ b/env.example
@@ -45,3 +45,7 @@ BASE_WALLET_PRIVATE_KEY=your_base_private_key  # Same as ETHEREUM_WALLET_PRIVATE
 # Monitoring
 SENTRY_DSN=your_sentry_dsn
 PROMETHEUS_PORT=9090
+
+# Discord Bot Configuration
+DISCORD_BOT_TOKEN=your_discord_bot_token
+DISCORD_CHANNEL_ID=1405408713505771652  # Conservative channel
