--- a/env.example
+++ b/env.example
@@ -49,3 +49,7 @@ PROMETHEUS_PORT=9090
 # Discord Bot Configuration
 DISCORD_BOT_TOKEN=your_discord_bot_token
 DISCORD_CHANNEL_ID=1405408713505771652  # Conservative channel
+
+# Telegram Signal Notifications
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+TELEGRAM_CHANNEL_ID=@your_private_group_username  # or numeric ID like -1001234567890
