feat: Major system improvements and bug fixes
## Core System Fixes
- Fix critical relative import error in price_monitor.py that was preventing system startup
- Remove problematic ASTER token from ignore list to allow proper processing
- Improve database schema and position management

## Enhanced Social Intelligence
- Add comprehensive curator intent analysis system with 2-stage processing
- Implement intent-based allocation multipliers for better risk management
- Add new curator intent analysis prompt template for LLM processing
- Improve token extraction with better chain context detection
- Enhanced social ingest with intent analysis integration

## Trading System Improvements
- Fix price oracle integration and remove redundant current_price storage
- Improve position repository with better exit rule management
- Enhanced trader logic with better allocation handling
- Improved prompt templates for better token extraction accuracy

## Configuration & Monitoring
- Add new Twitter curators to monitoring system
- Enhanced social ingest prompts with chain-specific context
- Better error handling and logging throughout the system
- Improved database operations and data consistency

## System Architecture
- Centralized allocation management system
- Re-enabled gem bot monitoring with proper integration
- Enhanced decision making with intent analysis
- Better separation of concerns and modularity

This represents a major system upgrade with improved reliability, better intelligence processing, and enhanced trading capabilities.

--- a/src/llm_integration/prompt_templates/social_lowcap/social_ingest.yaml
+++ b/src/llm_integration/prompt_templates/social_lowcap/social_ingest.yaml
@@ -4,11 +4,15 @@ token_extraction:
     
     "{message_text}"
     
+    **Important**: Pay attention to chain context. If the curator mentions a specific chain, 
+    that's the chain the token is on. Don't assume it's on your default chain.
+    
     Return a JSON object with:
     - tokens: Array of token objects, each containing:
       - token_name: The token ticker/symbol
-      - network: The blockchain network (solana, ethereum, base, etc.) or null if not clear
+      - network: The blockchain network (solana, ethereum, base, bsc, etc.) or null if not clear
       - contract_address: Contract address if mentioned, null otherwise
+      - chain_context: Any chain-specific context mentioned in the message
       - sentiment: positive, negative, or neutral
       - confidence: 0.0 to 1.0
       - has_chart: true if post contains chart/image, false otherwise
