Major system improvements: unified price system, enhanced trading, and PnL fixes
Core System Enhancements:
- Implement unified price collection system with ScheduledPriceCollector
- Add comprehensive position monitoring with PositionMonitor
- Create price data schema for consistent price storage
- Add unified price system architecture documentation

Trading System Improvements:
- Enhanced Jupiter client with better error handling
- Improved Solana trading execution with proper fee handling
- Fixed Jupiter swap error 0x1788 (insufficient liquidity handling)
- Enhanced entry/exit planning and execution logic
- Improved position repository with better database operations

PnL Calculation Fixes:
- Replace API calls with database price lookups for consistency
- Fix _get_native_usd_rate() database client reference
- Add batch PnL updates when positions are created/modified
- Ensure total_pnl_usd and total_pnl_native are calculated correctly

Social Trading Enhancements:
- Improved Discord gem bot monitoring
- Enhanced social ingest with better signal processing
- Updated curator intent analysis prompts
- Improved decision maker logic and validation

Configuration & Infrastructure:
- Updated social trading configuration
- Enhanced allocation management
- Improved telegram signal notifications
- Added comprehensive test suites for price collection

This represents a major system upgrade with improved reliability,
performance, and accuracy across all trading operations.

--- a/env.example
+++ b/env.example
@@ -33,7 +33,7 @@ API_KEY=your_api_key
 
 # Trading APIs
 HELIUS_API_KEY=your_helius_api_key
-JUPITER_API_URL=https://quote-api.jup.ag/v6
+JUPITER_API_URL=https://lite-api.jup.ag/swap/v1
 ZEROEX_API_KEY=your_0x_api_key  # Optional, has free tier
 
 # Wallet Configuration
