feat: major trading system improvements and bug fixes
- Add contract address preference system for token tracking
- Implement age-based and market cap-based allocation multipliers
- Fix database aggregate update race conditions with atomic operations
- Add automatic position limit management (33 position cap)
- Implement automatic PnL updates after all trades
- Fix wallet balance reconciliation and auto-update system
- Add trend exit rules integration for new positions
- Fix average entry price calculation logic
- Improve error handling and system robustness
- Add USDC conversion for Base/BSC exits (10% of proceeds)

--- a/src/config/social_trading_config.yaml
+++ b/src/config/social_trading_config.yaml
@@ -163,6 +163,16 @@ lotus_buyback:
   min_amount_sol: 0.001  # Minimum SOL amount to trigger buyback
   slippage_pct: 2.0  # Slippage tolerance for Jupiter swaps
 
+# USDC Conversion for EVM/BSC (like Lotus buybacks)
+usdc_conversion:
+  enabled: true
+  percentage: 10.0  # 10% of sell proceeds
+  min_amount_native:
+    bsc: 0.0004  # BNB minimum
+    base: 0.0001  # ETH minimum
+  slippage_pct: 2.0  # Slippage tolerance for swaps
+  chains: ['base', 'bsc']  # Only these chains (low fees)
+
 # Monitoring & Alerts
 monitoring:
   health_check_interval: 300  # seconds
