Major system improvements and bug fixes
- Fixed critical Entry 2/3 bug: Added proper logging objects and atomic database updates
- Fixed total_quantity reconciliation: Added updates to all entry/exit paths
- Implemented minute-by-minute P&L updates: Added to ScheduledPriceCollector
- Enhanced wallet balance management: Multi-chain updates with USD calculations
- Added ultra-low cap allocation tier: <k gets 0.33x allocation multiplier
- Added new curator: @breakb0nes__ for additional alpha sources
- Fixed USDC conversion bug: Added missing exit_value_native calculation
- Enhanced market cap allocation system: Now 5 tiers instead of 4
- Added comprehensive debug logging for USDC conversion troubleshooting

System now has reliable entry execution, accurate position tracking,
and consistent P&L/wallet balance updates across all chains.

--- a/src/config/twitter_curators.yaml
+++ b/src/config/twitter_curators.yaml
@@ -173,6 +173,16 @@ curators:
     tags: ["alpha", "calls"]
     notes: "Telegram-only curator; @eleetmoramblings"
 
+  - id: "breakb0nes"
+    name: "breakb0nes"
+    platforms:
+      twitter:
+        handle: "@breakb0nes__"
+        active: true
+        priority: "high"
+    tags: ["alpha", "calls"]
+    notes: "Twitter curator added via request"
+
 # Example of curator with both Twitter and Telegram
 # - id: "example_curator"
 #   name: "Example Curator"
